# pdx

./: .gitignore  LICENSE  Makefile  README-Gentoo.md  README.md  pyproject.toml
.github/workflows/: fast-forward.yml  lint.yml
pdx/: cli.py  find.py  index.py  model.py  podman.py  qdrant.py  query.py
